--- a/config.gradle
+++ b/config.gradle
@@ -28,9 +28,16 @@ ext {
                 "constraint"               : "com.android.support.constraint:constraint-layout:${version["androidConstraintSdkVersion"]}",
                 "multidex"                 : "com.android.support:multidex:${version["androidMultidexSdkVersion"]}",
 
+                //network
+                "okhttp3"                  : "com.squareup.okhttp3:okhttp:3.11.0",
+                "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
+                "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
+                "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
+
                 //rx2
                 "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.1.0",
                 "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.2.3",
+                "lifecycle-extensions"     : "android.arch.lifecycle:extensions:1.1.1",
                 "rxlifecycle2"             : "com.trello.rxlifecycle2:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
                 "rxlifecycle2-android"     : "com.trello.rxlifecycle2:rxlifecycle-android:${version["rxlifecycle2SdkVersion"]}",
                 "rxlifecycle2-components"  : "com.trello.rxlifecycle2:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
