--- a/base/build.gradle
+++ b/base/build.gradle
@@ -89,6 +89,7 @@ dependencies {
         exclude module: 'retrofit'
         exclude module: 'okio'
     }
+    api rootProject.ext.dependencies["gson"]
     api rootProject.ext.dependencies["okhttp3"]
 
     //分包方案
