--- a/config.gradle
+++ b/config.gradle
@@ -33,6 +33,7 @@ ext {
                 "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
                 "retrofit-converter-gson"  : "com.squareup.retrofit2:converter-gson:${version["retrofitSdkVersion"]}",
                 "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
+                "gson"                     : "com.google.code.gson:gson:2.8.5",
 
                 //rx2
                 "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.1.0",
