--- a/config.gradle
+++ b/config.gradle
@@ -35,6 +35,10 @@ ext {
                 "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
                 "gson"                     : "com.google.code.gson:gson:2.8.5",
 
+
+                //rxbinding
+                "rxbinding"                : "com.jakewharton.rxbinding2:rxbinding:2.1.1",
+
                 //rx2
                 "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.1.0",
                 "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.2.3",
