--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
     }
 
     defaultConfig {
+        applicationId "com.app.demo"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
@@ -28,6 +29,7 @@ dependencies {
     //support
     implementation rootProject.ext.dependencies["constraint"]
 
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation rootProject.ext.dependencies["junit"]
 
     implementation project(path: ':base')
