--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zyc_summarize.demo">
+    package="com.app.entrance">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.zyc_summarize.base.application.BaseApplication"
+        android:name="com.app.frame.application.BaseApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".view.activity.SplashActivity">
+        <activity android:name="com.app.entrance.view.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.MainActivity" />
-        <activity android:name=".view.activity.LoginActivity" />
-        <activity android:name=".view.activity.RegisterActivity" />
-        <activity android:name=".view.activity.ForgetPwsActivity" />
+        <activity android:name="com.app.entrance.view.activity.MainActivity" />
+        <activity android:name="com.app.entrance.view.activity.LoginActivity" />
+        <activity android:name="com.app.entrance.view.activity.RegisterActivity" />
+        <activity android:name="com.app.entrance.view.activity.ForgetPwsActivity" />
     </application>
 
 </manifest>
