--- a/config.gradle
+++ b/config.gradle
@@ -35,6 +35,9 @@ ext {
                 "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
                 "gson"                     : "com.google.code.gson:gson:2.8.5",
 
+                //arouter
+                "arouter-api"              : "com.alibaba:arouter-api:1.4.1",
+                "arouter-compiler"         : "com.alibaba:arouter-compiler:1.2.2",
 
                 //rxbinding
                 "rxbinding"                : "com.jakewharton.rxbinding2:rxbinding:2.1.1",
