--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
 
     implementation project(path: ':base')
+
+    implementation project(path: ':pay')
 }
