--- a/config.gradle
+++ b/config.gradle
@@ -35,6 +35,9 @@ ext {
                 "retrofit-adapter-rxjava2" : "com.squareup.retrofit2:adapter-rxjava2:${version["retrofitSdkVersion"]}",
                 "gson"                     : "com.google.code.gson:gson:2.8.5",
 
+                //mmkv
+                mmkv                       : "com.tencent:mmkv-static:1.0.18",
+
                 //arouter
                 "arouter-api"              : "com.alibaba:arouter-api:1.4.1",
                 "arouter-compiler"         : "com.alibaba:arouter-compiler:1.2.2",
