--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="com.app.entrance.view.activity.SplashActivity">
+
+        <activity android:name=".view.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
@@ -20,10 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.app.entrance.view.activity.MainActivity" />
-        <activity android:name="com.app.entrance.view.activity.LoginActivity" />
-        <activity android:name="com.app.entrance.view.activity.RegisterActivity" />
-        <activity android:name="com.app.entrance.view.activity.ForgetPwsActivity" />
+        <activity android:name=".view.activity.MainActivity" />
+        <activity android:name=".view.activity.LoginActivity" />
+        <activity android:name=".view.activity.RegisterActivity" />
+        <activity android:name=".view.activity.ForgetPwsActivity" />
     </application>
 
 </manifest>
