--- a/magic_camera/build.gradle
+++ b/magic_camera/build.gradle
@@ -10,6 +10,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
 
+    dataBinding {
+        enabled = true
+    }
+
     defaultConfig {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
@@ -33,5 +37,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation project(path: ':base')
+    //support
+    api rootProject.ext.dependencies["constraint"]
+
+    api project(path: ':base')
 }
