--- a/shopping_mall/build.gradle
+++ b/shopping_mall/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -15,32 +15,30 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.app.entrance"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner rootProject.ext.dependencies["androidJUnitRunner"]
+
 
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
-
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     //support
-    implementation rootProject.ext.dependencies["constraint"]
+    api rootProject.ext.dependencies["constraint"]
 
-    implementation 'com.android.support:support-v4:28.0.0'
-    testImplementation rootProject.ext.dependencies["junit"]
-
-    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
-
-    implementation project(path: ':shopping_mall')
-    implementation project(path: ':magic_camera')
+    api project(path: ':base')
 }
