--- a/config.gradle
+++ b/config.gradle
@@ -45,6 +45,9 @@ ext {
                 //rxbinding
                 "rxbinding"                : "com.jakewharton.rxbinding2:rxbinding:2.1.1",
 
+                //rxbinding
+                "rxpermissions"            : "com.github.tbruyelle:rxpermissions:0.10.2",
+
                 //rx2
                 "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.1.0",
                 "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.2.3",
