--- a/shopping_mall/src/main/AndroidManifest.xml
+++ b/shopping_mall/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.mylibrary.shopping_mall">
 
     <application>
+        <activity android:name=".view.activity.GoodsListActivity" />
         <activity android:name=".view.activity.GoodsDetailActivity" />
     </application>
 
