--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,11 @@ dependencies {
     //support
     implementation rootProject.ext.dependencies["constraint"]
 
-    implementation 'com.android.support:support-v4:28.0.0'
     testImplementation rootProject.ext.dependencies["junit"]
 
     annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
 
+    implementation project(path: ':base')
     implementation project(path: ':shopping_mall')
     implementation project(path: ':magic_camera')
 }
