--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':base', ':room_db', ':function', ':shopping_mall', ':magic_camera'
+include ':app', ':base', ':room_db', ':function', ':shopping_mall', ':magic_camera', ':moments'
