--- a/shopping_mall/build.gradle
+++ b/shopping_mall/build.gradle
@@ -37,5 +37,7 @@ dependencies {
     androidTestImplementation rootProject.ext.dependencies["runner"]
     androidTestImplementation rootProject.ext.dependencies["espresso-core"]
 
+    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
+
     api project(path: ':function')
 }
