--- a/base/build.gradle
+++ b/base/build.gradle
@@ -30,8 +30,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            consumerProguardFiles 'proguard-rules.pro'
         }
     }
 
@@ -90,4 +89,6 @@ dependencies {
     api rootProject.ext.dependencies["multidex"]
     //存储
     api rootProject.ext.dependencies["mmkv"]
+    //bugly
+    api rootProject.ext.dependencies["bugly-sdk"]
 }
