--- a/magic_camera/build.gradle
+++ b/magic_camera/build.gradle
@@ -5,11 +5,6 @@ android {
     buildToolsVersion rootProject.ext.android["buildToolsVersion"]
     useLibrary 'org.apache.http.legacy'
 
-    compileOptions {
-        targetCompatibility JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_1_8
-    }
-
     dataBinding {
         enabled = true
     }
@@ -39,6 +34,11 @@ android {
         cmake {
             path "CMakeLists.txt"
         }
+    }
+
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 }
 
