--- a/game_task/build.gradle
+++ b/game_task/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -15,31 +15,27 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.app.entrance"
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner rootProject.ext.dependencies["androidJUnitRunner"]
+
 
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
-
     }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //support
-    implementation rootProject.ext.dependencies["constraint"]
 
-    testImplementation rootProject.ext.dependencies["junit"]
-
-    annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation rootProject.ext.dependencies["runner"]
+    androidTestImplementation rootProject.ext.dependencies["espresso-core"]
 
     implementation project(path: ':function')
-    implementation project(path: ':game_task')
 }
