--- a/function/build.gradle
+++ b/function/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     api project(path: ':base')
     //刷新
     api rootProject.ext.dependencies["smartrefresh"]
+
+    api rootProject.ext.dependencies["gsyVideoPlayer"]
+    api rootProject.ext.dependencies["gsyVideoPlayer-armv7a"]
 }
